flattened config structure

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,11 +1,11 @@
-- certfile: example.com.pem
-  dnsnames:
-  - example.com
-  - '*.example.com'
-  muststaple: false
-  acmedirectory: https://acme-staging-v02.api.letsencrypt.org/directory
-  acmeaccountfile: acmeKey.pem
-  regsiteracme: true
-  updatecert: true
-  updateocsp: false
-  runinteralminutes: 0
+certfile: example.com.pem
+dnsnames:
+- example.com
+- '*.example.com'
+muststaple: false
+acmedirectory: https://acme-staging-v02.api.letsencrypt.org/directory
+acmeaccountfile: acmeKey.pem
+regsiteracme: true
+updatecert: true
+updateocsp: false
+runinteralminutes: 0
