Fix typo and switch to logging module instead fmt.Print

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -9,5 +9,5 @@ regsiteracme: true
 updatecert: true
 updateocsp: false
 haproxysocket: ""
-runinteralminutes: 0
+runintervalminutes: 0
 renewaldue: 14
