added config for certonly mode #5

--- a/config.yaml
+++ b/config.yaml
@@ -34,8 +34,10 @@ regsiteracme: true
 mode: haproxy
 certfile: example.com.pem
 haproxysocket: /run/haproxy/admin.sock
+updateserver: true
 
 # WEBSERVER CONFIGURATION (FOR NGINX)
 # mode: nginx
 # certfile: /etc/certbutler/example.com.pem
 # keyfile: /etc/certbutler/example.com.key
+# updateserver: true
