--- a/config.yaml
+++ b/config.yaml
@@ -1,45 +1,67 @@
 # TIMING CONFIGURATION
+timing:
+    # If runintervalminutes != 0, certbutler keeps running
+    # and checks for renewal every n minutes. 
+    # Set this to 0 if you intend to call certbutler regularly
+    # by other means, e.g. cron or systemd timer
+    runintervalminutes: 360
 
-# If runintervalminutes != 0, certbutler keeps running
-# and checks for renewal every n minutes. 
-# Set this to 0 if you intend to call certbutler regularly
-# by other means, e.g. cron or systemd timer
-runintervalminutes: 0 
-# renewalduecert specifies when to renew the cert in days
-renewalduecert: 14
-# renewaldueocsp is only relevant for haproxy. 
-# Specifies when to renew the ocsp response in days
-renewaldueocsp: 14
+    # renewalduecert specifies when to renew the cert in days
+    # if this is set to 0, certbutler will not update the certificate
+    renewalduecert: 14
+
+    # Specifies when to renew the ocsp response in days
+    # if this is set to 0, certbutler will not fetch OCSP responses
+    renewaldueocsp: 3
 
 # CERTIFICATE CONFIGURATION
-# Make sure to have _acme-challenge NS DNS entry for all 
-# given domains pointed to this server
-dnsnames:
-- example.com
-- '*.example.com'
-# If muststaple is true, you have to configure your web server accordingly
-# to send ocsp responses. 
-muststaple: true 
-# acmedirectory specifies the letsencrypt endpoint that is queried to issue certificates.
-# This is staging which does not issue trusted certificates, but has more relaxed rate 
-# limits so you can test everything before going into production (this is what certbot's 
-# dry run implicitly does)
-# For production (real certificates):
-# acmedirectory: https://acme-v02.api.letsencrypt.org/directory
-acmedirectory: https://acme-staging-v02.api.letsencrypt.org/directory
-acmeaccountfile: /etc/certbutler/acmeKey.pem
-regsiteracme: true
+certificate:
+    # Make sure to have _acme-challenge NS DNS entry for all 
+    # given domains pointed to this server
+    dnsnames:
+        - 'example.com'
+        - '*.example.com'
 
-# WEBSERVER CONFIGURATION (FOR HAPROXY)
-mode: haproxy
-certfile: example.com.pem
-haproxysocket: /run/haproxy/admin.sock
-updateserver: true
-deployhook: ''
+    # If muststaple is true, you have to configure your web server accordingly
+    # to send ocsp responses. 
+    muststaple: false
 
-# WEBSERVER CONFIGURATION (FOR NGINX)
-# mode: nginx
-# certfile: /etc/certbutler/example.com.pem
-# keyfile: /etc/certbutler/example.com.key
-# updateserver: true
-# deployhook: ''
+    # acmedirectory specifies the letsencrypt endpoint that is queried to issue certificates.
+    # This is staging which does not issue trusted certificates, but has more relaxed rate 
+    # limits so you can test everything before going into production (this is what certbot's 
+    # dry run implicitly does)
+    # For production (real certificates):
+    # acmedirectory: https://acme-v02.api.letsencrypt.org/directory
+    acmedirectory: https://acme-staging-v02.api.letsencrypt.org/directory
+
+    # acmeaccountfile specifies the file storing the keypair used as identity agains the
+    # acme server. If registeracme is set to true, a new identity will be created and 
+    # registed none is provided or the provided identity is invalid for the acme server.
+    acmeaccountfile: ""
+    regsiteracme: false
+
+# OUTPUT FILES CONFIGURATION
+files:
+    # If singlefile is set to true, certificate and key will be stored in one pem file
+    # (as needed for e.g. haproxy). Keyfile is ignored in this case.
+    # Otherwise certificate and key will be stored in two  files (as needed for e.g. nginx)
+    singlefile: false
+    certfile: ""
+    keyfile: ""
+
+# POST-PROCESSOR CONFIGURATIONS
+
+# HAPROXY UPDATES
+# Remove or leave empty to disable haproxy updates 
+# haproxy:
+#    haproxysocket: ""
+
+# NGINX RELOAD
+# Remove or set false to disable nginx updates 
+# nginx:
+#     reloadnginx: false
+
+# DEPLOYHOOK EXECUTION
+# Remove or leave empty to disable deploy hook execution 
+# deployhook:
+#    executable: ""
